# Ad-Simulation-Django

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  requirements.txt
Yektanet/: settings.py  urls.py
advertiser_management/: admin.py  models.py  urls.py  views.py
advertiser_management/migrations/: 0001_initial.py
advertiser_management/templates/advertiser_management/: ads.html  create_ad.html
