[tool.poetry]
name = "ad-simulation-django"
version = "0.1.0"
description = ""
authors = ["Mohamadamin Karami <mohamadaminkarami80@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
pre-commit = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
